tests/spec/parse/snapshots/lambda_in_return.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    return |x| x * 2;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Lambda {
                            params: [
                                Binding {
                                    pattern: Identifier {
                                        identifier: "x",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 23,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                            ],
                            return_annotation: Unknown,
                            body: Binary {
                                operator: Multiplication,
                                left: Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Literal {
                                    literal: Integer {
                                        value: 2,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 30,
                                        byte_length: 1,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 5,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 22,
                                byte_length: 9,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 16,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 23,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 33,
        },
    },
]
